Change background color

--- a/git-learning-2/css/style.css
+++ b/git-learning-2/css/style.css
@@ -6,7 +6,7 @@
 body {
     margin: 0;
     text-align: center;
-    background-color: #fff;
+    background-color: rgb(202, 38, 38);
     color: #3d3d3d;
     font-size: 16px;
     line-height: 1.7;
